make sure to clear author-profile so no weird alignment happens

--- a/style.css
+++ b/style.css
@@ -403,6 +403,7 @@ ul.pings.commentlist {
 *****************************************/
 .author-profile {
 	min-height: 125px;
+	clear:both;
 }
 
 img.avatar {
